--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background: url('../images/gravel.png');
+    background: url('../images/bananas.png');
     font-size: 18px;
     line-height: 34px;
     font-family: 'Arial', 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -93,7 +93,7 @@ nav a:first-child {
     padding-top: 130px;
 }
 
-.main-section {
+.main-container {
     background: #fff;
     padding: 30px;
     margin: 0 0 40px 0;
@@ -167,7 +167,7 @@ h3, .sidebar, h2 {
   }
 
   .work img {
-      width: 100%;
+      width: 100%; 
       border: 0 none;
       opacity: .8;
   }
@@ -175,13 +175,53 @@ h3, .sidebar, h2 {
   .work h3 {
       border-bottom: 0;
       background: #4aaaa5;
-      color: #fff; 
+      color: #fff;  
       text-align: center;
       position: absolute;      
-      bottom 20px;
+      bottom: 10px;
       padding: 15px;
       width: 100%;
       line-height: 30px;
       margin-bottom: 0;
       font-weight: 300; 
+ }
+
+ /* contact */
+
+ #contact-form ul {
+     margin-bottom: 20px;
+ }
+
+ #contact-form li {
+     margin-bottom: 10px;
+ }
+
+ label,
+ input[type=text],
+ input[type=email],
+ textarea {
+     display: block;
+     width: 100%;
+ }
+
+ input[type=text],
+ input[type=email],
+ textarea {
+     height: 35px;
+     border: 1px solid #ddd;
+     padding: 0 10px;
+     font-size: 14px;
+ }
+
+ textarea {
+     height: 200px;
+ }
+
+ input[type=submit] {
+     background: #4aaaa5;
+     border: 0 none;
+     color: #fff;
+     font-size: 18px;
+     padding: 10px 30px;
+     cursor: pointer;
  }
